# survivor-pathway-planner

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  profile_schema.txt  proposal.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
_bundle_extract/: .gitignore  README.md  pyproject.toml
_bundle_extract/app/: Home.py  copy.py  style.css
_bundle_extract/app/components/: candidate_card.py  empty_state.py  excluded_list.py  interventions_list.py  sidebar.py
_bundle_extract/models/: __init__.py
app/: AGENTS.md  Home.py  app.py  copy.py  db_access.py  plotly_theme.py  style.css
app/charts/: income_trajectory.py
app/components/: candidate_card.py  details_modal.py  empty_state.py  excluded_list.py  header.py  history_view.py  interventions_list.py  saved_profiles_list.py  sidebar.py  skills_interpreted.py
app/pages/: Profile.py
core/: anonymizer.py  crypto.py
data/: build_graph.py  loader.py
data/processed/: skill_embeddings.npz  survivors.json
data/raw/: occupations.csv  survivors.json
db/: profiles.db  repository.py
engine/: AGENTS.md  build_skill_corpus.py  constraint_engine.py  l1_skill_mapper.py  l2_veto_filter.py  l3_fuzzy_topsis.py  l4_llm_reasoner.py  l5_sensitivity.py  pipeline.py  vacatur.py
engine/prompts/: l4_reasoner.txt
fixtures/: __init__.py  demo_profiles.py  synthetic_profiles.py
models/: .schema-hash  AGENTS.md  __init__.py
scripts/: check_schema_hash.py  make_survivors.py
tests/: conftest.py
tests/integration/: test_smoke.py
tests/unit/: test_scaffolding.py
