[project]
name = "survivor-pathway-planner"
version = "0.1.0"
description = "Decision-support tool for caseworkers supporting trafficking survivors"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic==0.109.2",
    "cryptography==49.0.0",
    "plotly==5.24.1",
    "pydantic==2.13.4",
    "scikit-learn==1.9.0",
    "sentence-transformers==3.4.1",
    "streamlit==1.58.0",
]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "pytest==9.1.0",
    "ruff==0.15.17",
    "vcrpy==8.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "fixtures"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast unit tests (<5s, no LLM or embedding model)",
    "integration: end-to-end tests (may use cached LLM responses)",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "models"
disable_error_code = ["valid-type"]

[tool.ruff]
extend = "ruff.toml"
