[project]
name = "pathway-planner"
version = "0.1.0"
description = "Decision-support tool for caseworkers supporting trafficking survivors"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "streamlit>=1.39",
    "plotly>=5.24",
    "pandas>=2.2",
    "cryptography>=43.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "sentence-transformers>=5.6.0",
    "scikit-learn>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "vcrpy>=6.0",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RET"]
ignore = ["N999"]  # Streamlit pages use PascalCase by convention

[tool.ruff.lint.per-file-ignores]
"app/Home.py" = ["E402", "E501"]      # sys.path bootstrap precedes imports; HTML f-strings are long
"app/pages/*.py" = ["E402", "E501"]   # same pattern in any page
"app/components/*.py" = ["E501"]      # inline HTML legitimately exceeds line length


[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "unit: fast unit tests (no LLM, no embeddings)",
    "integration: end-to-end tests, may use cached LLM responses",
]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["models"]
